--- a/config/database.yml
+++ b/config/database.yml
@@ -2,7 +2,7 @@
 #   gem install sqlite3-ruby (not necessary on OS X Leopard)
 development:
   adapter: postgresql
-  user: postgres
+  username: postgres
   password: 
   database: sitename_dev
   host: localhost
@@ -14,7 +14,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  user: postgres
+  username: postgres
   password: 
   database: sitename_test
   host: localhost
@@ -23,7 +23,7 @@ test:
   
 production:
   adapter: postgresql
-  user: something
+  username: something
   password: something
   database: sitename_test
   host: localhost
